--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@webgpu/types": "^0.1.30",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
+  },
+  "dependencies": {
+    "gl-matrix": "^3.4.3"
   }
 }
